startup gestao-contratos

--- a/packages/webapp/public/index.html
+++ b/packages/webapp/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <gestao-normas-webapp></gestao-normas-webapp>
+  <gestao-contratos-webapp></gestao-contratos-webapp>
 </body>
 
 </html>
